5_Application/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  labels:
    app: todo
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
      app: todo
  template:
    metadata:
      labels:
        tier: frontend
        app: todo
    spec:
      containers:
        - name: todo-frontend
          image: dasmullidemo.azurecr.io/demo-frontend:2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 128Mi
