5_Application/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  labels:
    tier: backend
    app: todo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    tier: backend
    app: todo
