5_Application/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  labels:
    tier: frontend
    app: todo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    tier: frontend
    app: todo
