5_Application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-todo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: todo.democluster.dasmulli.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-frontend
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: demo-backend
            port:
              number: 80
  tls:
  - hosts:
    - '*.democluster.dasmulli.at'
    secretName: democluster-wildcard-tls
